Prevent browser navigation on horizontal scroll

--- a/handsontable/src/3rdparty/walkontable/css/walkontable.scss
+++ b/handsontable/src/3rdparty/walkontable/css/walkontable.scss
@@ -227,6 +227,7 @@ innerBorderBottom - Property controlled by bottom overlay
 
 .ht_master .wtHolder {
   overflow: auto;
+  overscroll-behavior-x: none;
 }
 
 .handsontable .ht_master thead,
